Updates to supprt Prometheus 2

--- a/templates/prometheus.service.j2
+++ b/templates/prometheus.service.j2
@@ -9,11 +9,9 @@ User=prometheus
 Group=prometheus
 ExecReload=/bin/kill -HUP $MAINPID
 ExecStart={{ prometheus_root_dir }}/prometheus \
-  -config.file={{ prometheus_config_dir }}/prometheus.yml \
-  -storage.local.path={{ prometheus_db_dir }} {% if prometheus_storage_local_target_heap_size != "" %} -storage.local.target-heap-size {{ prometheus_storage_local_target_heap_size }} {% endif %} \
-  -web.listen-address={{ prometheus_web_listen_address }}  \
-  -web.external-url={{ prometheus_web_external_url }}{% if prometheus_alertmanager_url != "" %}\
-  -alertmanager.url={{ prometheus_alertmanager_url }}{% endif %}
+  --config.file={{ prometheus_config_dir }}/prometheus.yml \
+  --storage.tsdb.path={{ prometheus_db_dir }} \
+  --web.listen-address={{ prometheus_web_listen_address }}  \
 {#  {% for flag, flag_value in prometheus_config_flags_extra.iteritems() %}-{{ flag }}={{ flag_value }} {% endfor %} #}
 
 SyslogIdentifier=prometheus
